# write-the

./: .fdignore  .gitignore  404.html  CNAME  LICENSE.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/: FUNDING.yml
.github/workflows/: mkdocs.yml  publish.yml  tests.yml
commands/convert/: index.html
commands/docs/: index.html
commands/mkdocs/: index.html
commands/model/: index.html
commands/tests/: index.html
docs/: cache_title.json  index.md  metadata.json  sitemap.xml  tree.html
docs/commands/: convert.md  docs.md  mkdocs.md  model.md  tests.md
docs/data/: 0.json  1.json  2.json
docs/doc/: 0c62dda0-5b7b-4a05-baac-898be065511a.json  0ffb56b7-f2c1-4342-9a22-0ae6c2b7d9fc.json  19982a76-a5be-4f41-a63e-302270cb22cb.json  216f04ca-bff4-40b2-98b9-19e195586966.json  2217b992-1842-446d-ae11-706f069c285b.json  2c31429f-3501-4abc-b629-588916eac092.json  30029985-99ff-465d-a5b5-87ff8a36c86a.json  39f8c374-1b60-4a63-93d3-4781b4a58e65.json  43712aac-9db0-4895-801a-55ebb8d6e53b.json  4399daf8-2bc6-4827-9bb1-8eab3077f75e.json  444365e1-5d8c-41ae-be41-08ab4c1b3693.json  45771aba-afb5-4878-9bc2-abf23e3edd94.json  4ad23fdf-cc83-4c20-b6e0-155ea9db40e5.json  52cc1611-69e6-41fd-b784-d28b1c86d6b5.json  62a8e8a3-9115-4342-9845-bab18ac1efb7.json  72451e34-6f85-44f7-9555-719479b7f92f.json  7f225397-4eb6-4753-a5c4-f1a822a0f09d.json  88bdea01-4e8c-48f2-8323-b942c3ac2f34.json  8b0cbd46-8b57-484a-89e7-c1a8ad2ee4e9.json  8d1f805d-7196-4ae6-90e7-8985c5cb0147.json  98863b3b-e388-4f99-bce8-c2dd51620863.json  9fadf2f5-29bb-470b-9194-fb7918e36deb.json  a681fccc-a06d-42be-b662-736905f0d014.json  a86f222d-13c8-48ca-8aa8-a538f0756bb9.json  a87dd6d5-fab5-4740-bca5-4f4a9f9e8a56.json  a8f8cdb6-7c37-45b5-b38f-3aee29994e7c.json  a9c8529d-f322-439a-959f-fb9d6aaffe7a.json  aeaac411-1531-43ef-8016-dd8fd20ccb7c.json  af6e1cf3-a31d-4424-ae0a-2840fcff426f.json  b8a97e82-d96d-4498-89d2-f798991d0a68.json  c7e402eb-594b-402e-9561-942425a5f0f4.json  d426a4e4-e28e-4127-a7c8-07cedc701eb3.json  d6da4987-a3ad-4f4d-aa7e-72634ff2be5c.json  dbda8db7-7b0f-4327-a1cf-f95fff7c9727.json  eaa2333d-04cb-4665-be97-79863dab2e95.json  f5033df9-6bd9-415d-8039-be1d4e6d373a.json  f94e83c9-c97e-4f4c-8943-a54109ad709f.json  f988ee49-ae7a-4b8f-a03e-8126786d2986.json
docs/reference/: cli.md  commands.md  cst.md  docs.md  errors.md  llm.md  mkdocs.md  models.md  tests.md  utils.md
docs/src/: pyproject.toml
docs/src/tests/: test_cst_docstring_adder.py  test_cst_docstring_remover.py  test_cst_function_and_class_collector.py  test_cst_node_remover.py  test_utils.py
docs/src/write_the/cli/: main.py
docs/src/write_the/commands/: __init__.py
docs/src/write_the/commands/converters/: converters.py  prompts.py
docs/src/write_the/commands/mkdocs/: mkdocs.py  templates.py
docs/src/write_the/commands/tests/: __init__.py  prompts.py
docs/src/write_the/cst/: __init__.py  docstring_remover.py  function_and_class_collector.py  node_remover.py
images/: untitled.blend  untitled.blend1
reference/cli/: index.html
reference/commands/: index.html
reference/cst/: index.html
reference/errors/: index.html
reference/llm/: index.html
reference/models/: index.html
reference/utils/: index.html
search/: search_index.json
tests/: test_cli_main.py  test_cst_docstring_adder.py  test_cst_docstring_remover.py  test_cst_function_and_class_collector.py  test_cst_node_extractor.py  test_cst_utils.py  test_model_utils.py  test_utils.py
write_the/: __about__.py  __init__.py  __main__.py  errors.py  llm.py  models.py  utils.py
(+39 files in other folders)
