[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "write-the"
description = 'AI-powered Code Generation and Refactoring Tool'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "wytamma", email = "wytamma.wirth@me.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer[all]",
  "langchain",
  "openai",
  "pyexpect",
  "tiktoken",
  "black",
  "libcst",
  "mkdocstrings[python]",
  "mkdocs-material"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wytamma/write-the#readme"
Issues = "https://github.com/wytamma/write-the/issues"
Source = "https://github.com/wytamma/write-the"

[project.scripts]
write-the = "write_the.cli:app"

[tool.hatch.version]
path = "write_the/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=write_the --cov=tests --cov-report xml"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "write_the/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
