[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "write-the"
description = 'AI-powered Code Generation and Refactoring Tool'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "wytamma", email = "wytamma.wirth@me.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer[all]==0.9.0",
  "langchain==0.0.333",
  "openai==0.28.1",
  "tiktoken==0.5.1",
  "black==23.11.0",
  "libcst==1.1.0",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/wytamma/write-the#readme"
Issues = "https://github.com/wytamma/write-the/issues"
Source = "https://github.com/wytamma/write-the"

[project.scripts]
write-the = "write_the.cli:app"

[tool.hatch.version]
path = "write_the/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "mkdocs==1.4.3",
  "mkdocs-autorefs==0.4.1",
  "mkdocs-material==9.1.16",
  "mkdocs-material-extensions==1.1.1",
  "mkdocstrings==0.22.0",
  "mkdocstrings-python==1.3.*",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=write_the --cov=tests --cov-report xml"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "write_the/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
